<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="action_settings">Settings</string>
    <string name="spotify_streamer_button">SPOTIFY STREAMER</string>
    <string name="scores_app_button">SCORES APP</string>
    <string name="library_app_button">LIBRARY APP</string>
    <string name="build_it_bigger_button">BUILD IT BIGGER</string>
    <string name="xyz_reader_button">XYZ READER</string>
    <string name="capstone_button">CAPSTONE: MY OWN APP</string>
    <string name="title_text">My Nanodegree Apps!</string>
</resources>
